--- a/send.html
+++ b/send.html
@@ -10,14 +10,14 @@
     <style>
         body { margin: 0; font-family: sans-serif; background: #000; display: flex; align-items: center; justify-content: center; height: 100vh; color: #fff; }
         .card { background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); padding: 40px 20px; border-radius: 30px; width: 90%; max-width: 360px; text-align: center; border: 1px solid rgba(255,255,255,0.2); }
-        .profile-img { width: 100px; height: 100px; border-radius: 50%; border: 4px solid #ff0050; margin-top: -80px; background: #222; }
-        textarea { width: 100%; height: 120px; background: rgba(0,0,0,0.3); border: 1px solid #444; color: white; padding: 15px; border-radius: 15px; margin: 20px 0; outline: none; resize: none; box-sizing: border-box; }
-        button { background: linear-gradient(to right, #ff006e, #3a86ff); color: white; border: none; padding: 15px; border-radius: 50px; font-weight: bold; width: 100%; cursor: pointer; }
+        .profile-img { width: 80px; height: 80px; border-radius: 50%; border: 3px solid #ff0050; margin-bottom: 10px; background: #222; }
+        textarea { width: 100%; height: 120px; background: rgba(255,255,255,0.05); border: 1px solid #444; color: white; padding: 15px; border-radius: 15px; margin: 20px 0; outline: none; resize: none; box-sizing: border-box; }
+        button { background: linear-gradient(to right, #ff006e, #3a86ff); color: white; border: none; padding: 15px; border-radius: 50px; font-weight: bold; width: 100%; cursor: pointer; font-size: 16px; }
     </style>
 </head>
 <body>
     <div class="card">
-        <img id="p-img" class="profile-img" src="">
+        <img id="p-img" class="profile-img" src="https://via.placeholder.com/80">
         <h2 id="user-display">@Loading...</h2>
         <textarea id="message" placeholder="எனக்குத் தெரியாமல் ஏதாவது சொல்லுங்கள்..."></textarea>
         <button onclick="sendNGL()">SEND NOW 🚀</button>
@@ -40,7 +40,6 @@
         function sendNGL() {
             const msg = document.getElementById('message').value.trim();
             if(msg) {
-                // அந்தந்த யூசருக்கான தனி போல்டரில் சேமிக்கும்
                 db.ref('users/' + user + '/messages').push({
                     text: msg,
                     timestamp: Date.now()
@@ -48,7 +47,11 @@
                     confetti();
                     alert("Message Sent! ✅");
                     document.getElementById('message').value = "";
+                }).catch(err => {
+                    alert("Error: " + err.message);
                 });
+            } else {
+                alert("Please type something!");
             }
         }
     </script>
