--- a/admin.html
+++ b/admin.html
@@ -3,65 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Inbox</title>
+    <title>Inbox</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        body { background: #111; color: #fff; font-family: sans-serif; padding: 20px; }
-        .nav { max-width: 500px; margin: auto; display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-        .story-card { background: linear-gradient(135deg, #ff0050, #ff00c8); border-radius: 20px; padding: 20px; margin: 15px auto; max-width: 500px; box-shadow: 0 10px 20px rgba(255, 0, 80, 0.2); position: relative; }
-        .msg-text { font-size: 20px; font-weight: bold; margin-bottom: 15px; word-wrap: break-word; }
-        .btn-del { background: rgba(0,0,0,0.4); border: none; color: white; padding: 5px 10px; border-radius: 10px; cursor: pointer; float: right; font-size: 12px; }
-        .time { font-size: 10px; opacity: 0.8; }
+        body { background: #000; color: #fff; font-family: sans-serif; padding: 20px; }
+        .header { display: flex; justify-content: space-between; align-items: center; max-width: 500px; margin: 0 auto 30px; }
+        .card { background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); border-radius: 25px; padding: 25px; margin: 15px auto; max-width: 500px; position: relative; animation: slideUp 0.4s ease; }
+        .card:nth-child(even) { background: linear-gradient(135deg, #ff0050 0%, #ff00c8 100%); }
+        .msg { font-size: 1.2rem; font-weight: bold; line-height: 1.4; margin-bottom: 10px; }
+        .time { font-size: 0.7rem; opacity: 0.7; }
+        .del-btn { position: absolute; top: 15px; right: 15px; background: rgba(0,0,0,0.2); border: none; color: white; padding: 5px 10px; border-radius: 10px; cursor: pointer; }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
-    <div class="nav">
+    <div class="header">
         <h2 id="title">Inbox</h2>
-        <a href="index.html" style="color:#0095f6; text-decoration:none;">Back</a>
+        <a href="index.html" style="color: #0095f6; text-decoration: none;">New Link</a>
     </div>
-    <div id="list">Loading messages...</div>
+    <div id="list"></div>
 
     <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyBLyf_dz6xPC9wdthZSVtpatkc8JgFhE4Q",
-            databaseURL: "https://chatbox-chats-default-rtdb.firebaseio.com"
-        };
+        const firebaseConfig = { apiKey: "AIzaSyBLyf_dz6xPC9wdthZSVtpatkc8JgFhE4Q", databaseURL: "https://chatbox-chats-default-rtdb.firebaseio.com" };
         firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        const params = new URLSearchParams(window.location.search);
-        const user = params.get('u');
+        const user = new URLSearchParams(window.location.search).get('u');
 
         if(user) {
-            document.getElementById('title').innerText = `@${user}'s Inbox`;
-            db.ref('users/' + user + '/messages').on('value', snap => {
+            document.getElementById('title').innerText = `@${user} Inbox`;
+            firebase.database().ref('users/'+user+'/messages').on('value', snap => {
                 const list = document.getElementById('list');
-                const data = snap.val();
                 list.innerHTML = "";
+                const data = snap.val();
                 if(data) {
                     Object.keys(data).reverse().forEach(k => {
-                        const date = new Date(data[k].timestamp).toLocaleString();
-                        list.innerHTML += `
-                            <div class="story-card">
-                                <button class="btn-del" onclick="deleteMsg('${k}')">Delete</button>
-                                <div class="msg-text">"${data[k].text}"</div>
-                                <div class="time">${date}</div>
-                            </div>`;
+                        list.innerHTML += `<div class="card">
+                            <button class="del-btn" onclick="deleteMsg('${k}')">✕</button>
+                            <div class="msg">"${data[k].text}"</div>
+                            <div class="time">${new Date(data[k].timestamp).toLocaleString()}</div>
+                        </div>`;
                     });
-                } else {
-                    list.innerHTML = "<p style='text-align:center;'>No messages yet.</p>";
-                }
+                } else { list.innerHTML = "<p align='center'>No messages yet.</p>"; }
             });
-        } else {
-            document.getElementById('list').innerText = "No user specified.";
         }
-
-        function deleteMsg(k) { 
-            if(confirm("Delete this message?")) {
-                db.ref('users/' + user + '/messages/' + k).remove(); 
-            }
-        }
+        function deleteMsg(k) { if(confirm("Delete?")) firebase.database().ref('users/'+user+'/messages/'+k).remove(); }
     </script>
 </body>
 </html>
